# Frame

./: README.md  build.gradle  framework.md  https.md  ioc.md  java_gc.md  jobScheduler.md  keepalive.md  mvp.md  oom.md  oom1.md  settings.gradle  skia.md  sophix.md  splash.md  tinker.md  uiRender.md  vm.md  youhua.md  电量监控.md
Bsdiff/: Readme.md  local.properties
Bsdiff/app/: CMakeLists.txt  build.gradle
Bsdiff/app/src/androidTest/java/com/maple/bsdiff/: ExampleInstrumentedTest.java
Bsdiff/app/src/main/: AndroidManifest.xml
Bsdiff/app/src/main/cpp/: bsdiff.c  bspatch.c  native-lib.cpp
Bsdiff/app/src/main/java/com/maple/bsdiff/: BsdiffUtil.java  MainActivity.java
Bsdiff/app/src/main/res/layout/: activity_main.xml
Bsdiff/app/src/main/res/xml/: file_paths.xml
Bsdiff/app/src/test/java/com/maple/bsdiff/: ExampleUnitTest.java
Bsdiff/gradle/wrapper/: gradle-wrapper.properties
Douyu/: Readme.md
Douyu/app/: build.gradle
Douyu/app/src/main/: AndroidManifest.xml
Douyu/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Douyu/gradle/wrapper/: gradle-wrapper.properties
Douyu/resource/: build_android.sh
Frame/: build.gradle  gradle.properties
Frame/ann_butterknife/: IBinder.java
Frame/ann_compiler_butterknife/: build.gradle
Frame/aop/: build.gradle
Frame/aop/src/main/: AndroidManifest.xml
Frame/arouter/: build.gradle
Frame/aroutert1/: build.gradle
Frame/aroutert1/src/main/: AndroidManifest.xml
Frame/aroutert2/: build.gradle
Frame/eventbus/: build.gradle
Frame/gifload/: build.gradle
Frame/gifload/src/main/: AndroidManifest.xml
Frame/gifload/src/main/cpp/: CMakeLists.txt  gifload.cpp
Frame/gradle/wrapper/: gradle-wrapper.properties
Frame/hotfix/src/main/: AndroidManifest.xml
Frame/livedatabus/: build.gradle
Frame/livedatabus/src/main/: AndroidManifest.xml
Frame/myapplication/src/main/: AndroidManifest.xml
Frame/simple/src/main/: AndroidManifest.xml
Frame/skia/: CMakeLists.txt  build.gradle
Frame/skia/src/main/cpp/: cdjpeg.h  jmorecfg.h
Frame/skia/src/main/java/com/maple/skia/: LuBan.java  MainActivity.java
Frame/skia/src/main/res/layout/: activity_main.xml
Frame/skia/src/test/java/com/maple/skia/: ExampleUnitTest.java
Frame/sophix/: CMakeLists.txt
Frame/sophix/src/androidTest/java/com/maple/sophix/: ExampleInstrumentedTest.java
Frame/sophix/src/main/: AndroidManifest.xml
Frame/sophix/src/main/java/com/maple/sophix/: MainActivity.java  Test.java
Frame/sophix/src/main/java/com/maple/sophix/util/: Replace.java  SopHix.java
Frame/sophix/src/main/jni/: art_method.h  dalvik.h  mainactivity.cpp
Frame/wifiutil/src/main/: AndroidManifest.xml
Ioc/: Readme.md
Ioc/app/: build.gradle
Ioc/app/src/main/: AndroidManifest.xml
Ioc/app/src/main/cpp/: CMakeLists.txt  cardocr.cpp  utils.cpp  utils.h
Ioc/gradle/wrapper/: gradle-wrapper.properties
Ioc/train/: eng.inttemp  eng.monospaced.exp0.box  eng.monospaced.exp0.tif  eng.monospaced.exp0.tr  eng.monospaced.exp2 (2).box  eng.monospaced.exp2 (2).tif  eng.monospaced.exp2 (2).tr  eng.monospaced.exp2.box  eng.monospaced.exp2.tif  eng.monospaced.exp2.tr  eng.normproto  eng.pffmtable  eng.unicharset
Ioc/train/tessdata/: eng.traineddata
JsonFramework/: readme.md
JsonFramework/app/: build.gradle
JsonFramework/app/src/main/: AndroidManifest.xml
JsonFramework/gradle/wrapper/: gradle-wrapper.properties
Rxjava/: readme.md
Rxjava/app/: build.gradle
Rxjava/app/src/main/: AndroidManifest.xml
Rxjava/gradle/wrapper/: gradle-wrapper.properties
VoiceChange/: Readme.md
VoiceChange/app/: build.gradle
VoiceChange/app/src/main/: AndroidManifest.xml
VoiceChange/app/src/main/cpp/: CMakeLists.txt  common_platform.cpp  native-lib.cpp  play_sound.cpp
VoiceChange/gradle/wrapper/: gradle-wrapper.properties
aop/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
arouter/src/main/: AndroidManifest.xml
aroutert1/: build.gradle
aroutert2/src/main/: AndroidManifest.xml
demo/app/: build.gradle
demo/gradle/wrapper/: gradle-wrapper.properties
eventbus/src/main/: AndroidManifest.xml
ffmpeg/: Readme.md
ffmpeg/app/: build.gradle
ffmpeg/app/src/main/: AndroidManifest.xml
ffmpeg/app/src/main/cpp/: CMakeLists.txt  audio_onOpenSL.cpp  audio_play.c  n_thread.cpp  native-lib.cpp  video_play.cpp
ffmpeg/app/src/main/cpp/include/libavutil/: mem.h___jb_old___
ffmpeg/gradle/wrapper/: gradle-wrapper.properties
ffmpeg/resources/: CMakeLists.txt  build_android.sh  dn_ffmpeg_player.c
framework/: animator.md  appstart.mdj  asyntask.md  binder.md  framework.md  handler.md  listview.md  window.md
gifload/src/main/cpp/: gif.h  gifload.cpp
hotfix/: build.gradle  maindexlist.txt  multiDexKeep.keep
hotfix/src/main/: AndroidManifest.xml
ioc/: build.gradle
ioc/src/main/: AndroidManifest.xml
keepalive/: build.gradle
keepalive/src/main/: AndroidManifest.xml
linuxBase/: Makefile1  Makefile2  gdb.md  linux_cmd.md  makefile.md  nthread.c  nthread2.c  nthread3.c  posix.md  shell_demo.sh  shell_demo2.sh
mvvm/: memory-20190902T184028.alloc  sample.trace
mvvm/app/: build.gradle
mvvm/app/src/main/: AndroidManifest.xml
mvvm/gradle/wrapper/: gradle-wrapper.properties
myapplication/: build.gradle
ndk/: Readme.md
ndk/app/: build.gradle
ndk/app/src/main/: AndroidManifest.xml
ndk/gradle/wrapper/: gradle-wrapper.properties
otherPackage/: http.md  imageLoader.md  other.mdj  sqlite.md
plugincore/: build.gradle
plugincore/src/main/: AndroidManifest.xml
pluginmain/: build.gradle
pluginmain/src/main/: AndroidManifest.xml
simple/: build.gradle
simple/src/main/: AndroidManifest.xml
skia/src/main/: AndroidManifest.xml
skia/src/main/cpp/: cderror.h  jerror.h  jinclude.h  jpeglib.h  native-lib.cpp
skin/: Readme.md  settings.gradle
skin/app/: build.gradle
skin/app/src/main/: AndroidManifest.xml
skin/gradle/wrapper/: gradle-wrapper.properties
skin/skin1/: build.gradle
skin/skin1/src/main/: AndroidManifest.xml
sophix/: build.gradle
sophix/src/main/jni/: mainactivity.cpp
wifiutil/: build.gradle
(+254 files in other folders)
